# vite-video-streaming-app

./: README.md  docker-compose.yml
3D-poc/: README.md  config.json  pyvista-poc.py
chunks-video-streaming/backend/: index.js  package.json  server.py
chunks-video-streaming/frontend/src/: App.js
chunks-video-streaming/frontend/src/Components/: VideoPlayer.jsx
h265-video-generator/: docker-compose.yml  dockerfile  h265_ffmpeg_generator.sh  session.sdp
h265-video-server/fastapi-videoserver/: README.md  dockerfile  pyproject.toml
h265-video-server/fastapi-videoserver/src/fastapi-videoserver/: evgeni-main.py  or-main.py  session.sdp  session1.sdp
h265-video-server/ffmpeg-videoserver/: dockerfile  generate_video.sh  listen_and_stream_to_http.sh  session.sdp
h265-video-server/video-generator/: dockerfile
h265-video-server/video-server/: dockerfile
h265-video-server/videoserver/: dockerfile  pyproject.toml
h265-video-server/videoserver/src/videoserver/: main.py
or-scripts/: camera.sh  run.sh
or-scripts/client/: App.jsx
or-scripts/server/: main.py
video-streaming/: .gitignore  package-lock.json  package.json  vite.config.ts
video-streaming-app/: docker-compose.yml  dockerfile  package-lock.json  package.json
video-streaming-app/src/: App.tsx
video-streaming/src/: App.css  App.tsx  index.css  main.tsx  styles.css
